--- a/src/app.scss
+++ b/src/app.scss
@@ -1,35 +1,34 @@
-// General 
+// General
 *,
 *::after,
-*::before{
+*::before {
   margin: 0px;
   padding: 0px;
   box-sizing: inherit;
 }
 
 html {
-    font-size: 62.5%;
-  }
-  body {
-    color: #636161;
-    line-height: 1.7;
-    box-sizing: border-box;
-    font-weight: 400;
-    background: #f4f4f4;
-  }
+  font-size: 62.5%;
+}
+body {
+  color: #636161;
+  line-height: 1.7;
+  box-sizing: border-box;
+  font-weight: 400;
+  background: #f4f4f4;
+}
 
-  // Container
-  .container{
-    width: 100%;
-    padding: 0;
-  }
+// Container
+.container {
+  width: 100%;
+  padding: 0;
+}
 
 //   TopBar
 .topbar-container {
-   
-    background-color: #FFF;
-    color: #aaa;
-    font-size: 1.4rem;
+  background-color: #fff;
+  color: #aaa;
+  font-size: 1.4rem;
 }
 .topbar-inside {
   display: flex;
@@ -39,7 +38,7 @@ html {
   letter-spacing: 1px;
   vertical-align: middle;
 }
-.topbar-right{
+.topbar-right {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -50,7 +49,7 @@ html {
 .topbar-icons {
   box-shadow: -1px 0 0 rgba(0, 0, 0, 0.08);
   margin: 0;
-  padding: .8rem 1rem .4rem;
+  padding: 0.8rem 1rem 0.4rem;
   min-height: 3.2rem;
   height: 100%;
 }
@@ -61,52 +60,51 @@ html {
   text-align: center;
   min-height: 3.2rem;
 }
-.site-top-border{
-    background-color: #0d49b7;
-    height: 4px;
-    position:relative;
-    z-index:8;
-    display:block;
-  }
+.site-top-border {
+  background-color: #0d49b7;
+  height: 4px;
+  position: relative;
+  z-index: 8;
+  display: block;
+}
 
-  // Brand
+// Brand
 .brand-inside {
-    display: flex;
-    justify-content: center;
-    width: 80%;
-    margin: 0 auto;
-    letter-spacing: 1px;
-    vertical-align: middle;
-    padding-bottom: 2.5rem;
-   
-  }
-  .site-title {
-    font-family: 'Rokkitt', serif;
-    font-weight: 200;
-    line-height: 1em;
-    word-wrap: break-word;
-    font-size: 9.4rem;
-  }
-  .site-title a{
-    color: #000 !important;
-  }
-  .site-branding a {
-    display: block;
-    margin: 0 auto;
-    text-align: center;
-  }
-  .site-description {
-      font-size: 1.3rem;
-      line-height: 1.5rem;
-      letter-spacing: 2px;
-      font-weight: 300;
-      text-transform: uppercase;
-      color: #656565;
-      font-family: 'Rokkitt', serif;
-      text-align: center;
-  }
+  display: flex;
+  justify-content: center;
+  width: 80%;
+  margin: 0 auto;
+  letter-spacing: 1px;
+  vertical-align: middle;
+  padding-bottom: 2.5rem;
+}
+.site-title {
+  font-family: "Rokkitt", serif;
+  font-weight: 200;
+  line-height: 1em;
+  word-wrap: break-word;
+  font-size: 9.4rem;
+}
+.site-title a {
+  color: #000 !important;
+}
+.site-branding a {
+  display: block;
+  margin: 0 auto;
+  text-align: center;
+}
+.site-description {
+  font-size: 1.3rem;
+  line-height: 1.5rem;
+  letter-spacing: 2px;
+  font-weight: 300;
+  text-transform: uppercase;
+  color: #656565;
+  font-family: "Rokkitt", serif;
+  text-align: center;
+}
 
-  // Navbar
+// Navbar
 .navbar-container {
   width: 80%;
   margin: 0 auto;
@@ -115,295 +113,288 @@ html {
   display: flex;
   align-items: center;
   min-height: 5rem;
-
-  
 }
-.navbar-list{
+.navbar-list {
   display: flex;
   align-items: center;
 }
-.navbar-item{
+.navbar-item {
   margin-right: 3.5rem;
 }
 
 //Content Area
 .content-area {
-    width: 80%;
-    margin: 0 auto;
-    background-color: #fff;
-    margin-top: 6rem;
-    margin-bottom: 6rem;
-    padding: 3rem 0;
-  }
-  .content-about {
-    display: flex;
-    justify-content: space-between;
-  }
-  .profile-Image{
-    padding: 3rem;
-  }
-  .profile-about{
-    padding: 3rem;
-  }
-  .profile-about h1{
-    color: #3a3a3a;
-    font-family: 'Rokkitt', serif;
-    font-size: 3.2rem;
-    margin-bottom: .30em;
-    font-weight: 200;
-  }
-  .about-text{
-    font-family: "Roboto", Sans-serif;
-      font-weight: 400;
-      color: #636161;
-      font-size: 1.5rem;
-      line-height: 1.6;
-  }
+  width: 80%;
+  margin: 0 auto;
+  background-color: #fff;
+  margin-top: 6rem;
+  margin-bottom: 6rem;
+  padding: 3rem 0;
+}
+.content-about {
+  display: flex;
+  justify-content: space-between;
+}
+.profile-Image {
+  padding: 3rem;
+}
+.profile-about {
+  padding: 3rem;
+}
+.profile-about h1 {
+  color: #3a3a3a;
+  font-family: "Rokkitt", serif;
+  font-size: 3.2rem;
+  margin-bottom: 0.3em;
+  font-weight: 200;
+}
+.about-text {
+  font-family: "Roboto", Sans-serif;
+  font-weight: 400;
+  color: #636161;
+  font-size: 1.5rem;
+  line-height: 1.6;
+}
 
-  // content tools
+// content tools
 
-.skills-heading{
-    color: #3a3a3a;
-    font-family: 'Rokkitt', serif;
-    font-size: 3rem;
-    margin-bottom: .20em;
-    font-weight: 200;
-    margin-top: 0;
-  }
-  .content-tools ul{
-  list-style: circle!important;
+.skills-heading {
+  color: #3a3a3a;
+  font-family: "Rokkitt", serif;
+  font-size: 3rem;
+  margin-bottom: 0.2em;
+  font-weight: 200;
+  margin-top: 0;
+}
+.content-tools ul {
+  list-style: circle !important;
   margin-left: 3rem;
   font-size: 1.5rem;
-  }
-  .content-tools li {
-    margin: .7rem;
-  }
+}
+.content-tools li {
+  margin: 0.7rem;
+}
 
-  //content Instruction 
-.content-instruction{
-    width: 80%;
-    margin-left: 50px;
-  }
-  .content-instruction h2 {
-      line-height: 1.5em;
-      color: #3a3a3a;
-      font-family: 'Rokkitt', serif;
-      font-size: 2.8rem;
-      margin-bottom: .65em;
-      font-weight: 200;
-      word-wrap: break;
-      margin-top:3rem;
-  }
-  .content-instruction p {
-    margin: 0 0 2rem;
-    text-align: justify;
-    font-family: "Roboto", Sans-serif;
-      font-weight: 400;
-      color: #636161;
-      font-size: 1.4rem;
-      line-height: 1.6;
-  }
+//content Instruction
+.content-instruction {
+  width: 80%;
+  margin-left: 50px;
+}
+.content-instruction h2 {
+  line-height: 1.5em;
+  color: #3a3a3a;
+  font-family: "Rokkitt", serif;
+  font-size: 2.8rem;
+  margin-bottom: 0.65em;
+  font-weight: 200;
+  word-wrap: break;
+  margin-top: 3rem;
+}
+.content-instruction p {
+  margin: 0 0 2rem;
+  text-align: justify;
+  font-family: "Roboto", Sans-serif;
+  font-weight: 400;
+  color: #636161;
+  font-size: 1.4rem;
+  line-height: 1.6;
+}
 
-  // sidebar social
-  .side-aligned-social {
-    top: 30.5rem;
-    position: fixed;
-      right: -6px;
-      z-index: 999;
-      transition: right 0.4s ease 0.5s;
-      font-size: 1.4rem;
-      line-height: 1.6;
-      
-  }
-  .side-aligned-social a {
-    display: block;
-  }
-  .side-aligned-social a.social-icon {
-    background-color: #0d49b7;
-    display: block;
-    width: 5.1rem;
-    height: 4.6rem;
-    margin: 0 0 2px;
-    color: #FFF;
-    text-align: center;
-    padding: .8rem .5rem 0 0;
-    font-size: 2rem;
-    position: relative;
-    left: 0;
-    transition: left 0.2s ease 0s;
-  }
-  .side-aligned-social a.social-icon:hover {
-    left: -3px;
-    background-color: #0d49b7;
-  }
+// sidebar social
+.side-aligned-social {
+  top: 30.5rem;
+  position: fixed;
+  right: -6px;
+  z-index: 999;
+  transition: right 0.4s ease 0.5s;
+  font-size: 1.4rem;
+  line-height: 1.6;
+}
+.side-aligned-social a {
+  display: block;
+}
+.side-aligned-social a.social-icon {
+  background-color: #0d49b7;
+  display: block;
+  width: 5.1rem;
+  height: 4.6rem;
+  margin: 0 0 2px;
+  color: #fff;
+  text-align: center;
+  padding: 0.8rem 0.5rem 0 0;
+  font-size: 2rem;
+  position: relative;
+  left: 0;
+  transition: left 0.2s ease 0s;
+}
+.side-aligned-social a.social-icon:hover {
+  left: -3px;
+  background-color: #0d49b7;
+}
 
-  // Contact Form
-  .contactForm {
-    padding-left: 15rem;
-  }
-  .contact-heading h1{
+// Contact Form
+.contactForm {
+  padding-left: 15rem;
+}
+.contact-heading h1 {
+  line-height: 1.5em;
+  color: #3a3a3a;
+  font-family: "Rokkitt", serif;
+  font-size: 3.2rem;
+  margin-bottom: 0.55em;
+  font-weight: 200;
+  word-wrap: break-word;
+  margin-top: 0;
+}
+.client-details h2 {
+  line-height: 1.5em;
+  color: #3a3a3a;
+  font-family: "Rokkitt", serif;
+  font-size: 2.8rem;
+  margin-bottom: 0.65em;
+  font-weight: 200;
+  word-wrap: break-word;
+  margin-top: 0;
+}
+.client-details p {
+  margin: 0 0 2rem;
+  color: #636161;
+  font-family: "Open Sans", sans-serif;
+  font-size: 1.4rem;
+  line-height: 1.6;
+}
+.contact-item {
+  margin-bottom: 1rem;
+}
+
+// Experience
+
+.experience-container {
+  h1 {
     line-height: 1.5em;
     color: #3a3a3a;
-      font-family: 'Rokkitt', serif;
-      font-size: 3.2rem;
-      margin-bottom: .55em;
-      font-weight: 200;
-      word-wrap: break-word;
-      margin-top: 0;
-  
+    font-family: "Rokkitt", serif;
+    font-size: 3.2rem;
+    margin-bottom: 0.55em;
+    font-weight: 200;
+    word-wrap: break-word;
+    margin-top: 0;
   }
-  .client-details h2{
+  h2 {
     line-height: 1.5em;
     color: #3a3a3a;
-      font-family: 'Rokkitt', serif;
-      font-size: 2.8rem;
-      margin-bottom: .65em;
-      font-weight: 200;
-      word-wrap: break-word;
-      margin-top: 0;
+    font-family: "Rokkitt", serif;
+    font-size: 2.8rem;
+    font-weight: 200;
+    word-wrap: break-word;
+    margin: 0;
   }
-  .client-details p {
-    margin: 0 0 2rem;
-    color: #636161;
-    font-family: 'Open Sans', sans-serif;
+  h3 {
+    line-height: 1.5em;
+    color: #3a3a3a;
+    font-family: "Rokkitt", serif;
+    font-size: 2.8rem;
+    font-weight: 200;
+    word-wrap: break-word;
+    margin-bottom: 0;
+  }
+  h4 {
+    line-height: 1.5em;
+    color: #3a3a3a;
+    font-family: "Rokkitt", serif;
+    font-size: 2.2rem;
+    font-weight: 200;
+    word-wrap: break-word;
+    margin: 0;
+  }
+  p {
     font-size: 1.4rem;
-      line-height: 1.6;
   }
-  .contact-item{
-    margin-bottom: 1rem;
+  ul {
+    font-size: 1.2rem;
   }
-
-  // Experience 
-  
-.experience-container{
-    h1{
-        line-height: 1.5em;
-        color: #3a3a3a;
-          font-family: 'Rokkitt', serif;
-          font-size: 3.2rem;
-          margin-bottom: .55em;
-          font-weight: 200;
-          word-wrap: break-word;
-          margin-top: 0;
-      }
-      h2{
-        line-height: 1.5em;
-        color: #3a3a3a;
-          font-family: 'Rokkitt', serif;
-          font-size: 2.8rem;
-          font-weight: 200;
-          word-wrap: break-word;
-          margin: 0;
-      }
-      h3{
-        line-height: 1.5em;
-        color: #3a3a3a;
-          font-family: 'Rokkitt', serif;
-          font-size: 2.8rem;
-          font-weight: 200;
-          word-wrap: break-word;
-          margin-bottom: 0;
-      }
-      h4{
-        line-height: 1.5em;
-        color: #3a3a3a;
-          font-family: 'Rokkitt', serif;
-          font-size: 2.2rem;
-          font-weight: 200;
-          word-wrap: break-word;
-          margin: 0;
-      }
-      p{
-          font-size: 1.4rem;
-      }
-      ul{
-          font-size: 1.2rem;
-      }
-      table{
-          padding-left: 2rem;
-      }
-} 
-.item-container{
-    width: 80%;
-    margin: 0 auto;
-    background-color: #e5e2e2;
-    padding: 30px;
-    margin-bottom: 40px;
+  table {
+    padding-left: 2rem;
   }
-  .experience-highlights {
-    margin-left: 30px;
-    list-style-type: circle;
-  }
+}
+.item-container {
+  width: 80%;
+  margin: 0 auto;
+  background-color: #e5e2e2;
+  padding: 30px;
+  margin-bottom: 40px;
+}
+.experience-highlights {
+  margin-left: 30px;
+  list-style-type: circle;
+}
 
+// html Elements
+a {
+  text-decoration: none;
+  background-color: transparent;
+  cursor: pointer;
+  color: #aaa;
+}
+a:hover {
+  text-decoration: none;
+  color: #0d49b7;
+}
+ul {
+  list-style: none;
+}
+input {
+  width: 50%;
+  height: 34px;
+  padding: 6px 12px;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 2px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #555;
+  margin-bottom: 5px;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
 
-
-  // html Elements
-    a{
-        text-decoration: none;
-         background-color: transparent;
-        cursor: pointer;
-        color: #aaa;
-      }
-      a:hover{
-      text-decoration: none;
-      color: #0d49b7;
-      }
-      ul {
-        list-style: none;
-      }
-      input {
-        width: 50%;
-          height: 34px;
-          padding: 6px 12px;
-          background-color: #fff;
-          border: 1px solid #ccc;
-          border-radius: 2px;
-          font-size: 14px;
-          line-height: 1.42857143;
-          color: #555;
-          margin-bottom: 5px;
-          box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
-       
-          transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
-      }
-      input:focus {
-        
-        border: 2px solid #66afe9;
-        outline-width: 0;
-      }
-      textarea {
-        width: 50%;
-          height: 120px;
-          padding: 6px 12px;
-          background-color: #fff;
-          border: 1px solid #ccc;
-          border-radius: 2px;
-          font-size: 14px;
-          line-height: 1.42857143;
-          color: #555;
-          box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
-          transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
-          margin-bottom: 5px;
-      }
-      textarea:focus {
-        border: 2px solid #66afe9;
-        outline-width: 0;
-      }
-      label{
-        display: inline-block;
-        max-width: 100%;
-        margin-bottom: 5px;
-        font-weight: 700;
-        cursor: default;
-        color: #636161;
-        font-family: 'Open Sans', sans-serif;
-        font-size: 14px;
-        line-height: 1.6;
-      } 
-      button {
-        padding: 10px;
-        border-radius: 4px;
-      }
-      button:hover {
-       background-color: rgba(128, 128, 128, 0.2)
-      }
+  transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
+}
+input:focus {
+  border: 2px solid #66afe9;
+  outline-width: 0;
+}
+textarea {
+  width: 50%;
+  height: 120px;
+  padding: 6px 12px;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 2px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #555;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
+  margin-bottom: 5px;
+}
+textarea:focus {
+  border: 2px solid #66afe9;
+  outline-width: 0;
+}
+label {
+  display: inline-block;
+  max-width: 100%;
+  margin-bottom: 5px;
+  font-weight: 700;
+  cursor: default;
+  color: #636161;
+  font-family: "Open Sans", sans-serif;
+  font-size: 14px;
+  line-height: 1.6;
+}
+button {
+  padding: 10px;
+  border-radius: 4px;
+}
+button:hover {
+  background-color: rgba(128, 128, 128, 0.2);
+}
